--- a/templates/about.html
+++ b/templates/about.html
@@ -12,41 +12,44 @@
         to leave on other business, welcomed a fourteenth to fill into their party.
     </p>
 
-    <div class="row featurette">
-        <div class="col-md-7">
-            <h3>{{ company[0]["name"] }}</h3>
-            <p>
-                {{ company[0]["description"] }}
-            </p>
-        </div>
-        <div class="col-md-5">
-            <img src="{{ company[0]['image_source'] }}" alt="Picture of Thorin with a sword">
-        </div>
-    </div>
+    {% for member in company %}
 
-    <div class="row featurette">
-        <div class="col-md-5">
-            <img src="{{ company[1]['image_source'] }}" alt="Fíli and Kíli">
-        </div>
-        <div class="col-md-7">
-            <h3>{{ company[1]["name"] }}</h3>
-            <p>
-                {{ company[1]["description"] }}
-            </p>
-        </div>
-    </div>
+        <div class="row featurette">
 
-    <div class="row featurette">
-        <div class="col-md-7">
-            <h3>{{ company[2]["name"] }}</h3>
-            <p>
-                {{ company[2]["description"] }}
-            </p>
+            {% if loop.index % 2 != 0 %}
+                <div class="col-md-7">
+                    <h3>{{ loop.index }}. {{ member.name }}</h3>
+                    <p>
+                        {{ member.description }}
+                    </p>
+                </div>
+                <div class="col-md-5">
+                    <img src="{{ member.image_source }}" alt="" class="featurette-image image-responsive">
+                </div>
+
+            {% else %}
+
+                <div class="col-md-5">
+                    <img src="{{ member.image_source }}" alt="" class="featurette-image image-responsive">
+                </div>
+                <div class="col-md-7">
+                    <h3>{{ loop.index }}. {{ member.name }}</h3>
+                    <p>
+                        {{ member.description }}
+                    </p>
+                </div>
+
+            {% endif %}
+
         </div>
-        <div class="col-md-5">
-            <img src="{{ company[2]['image_source'] }}" alt="Óin">
-        </div>
-    </div>
+
+        {% if loop.index != loop.length %}
+
+            <hr class="featurette-divider">
+
+        {% endif %}
+
+    {% endfor %}
 
 {% endblock %}
     
